# yfinance-mcp-server

./: Procfile  pyproject.toml  requirements.txt
src/yfinance_mcp/: __init__.py  run_sse.py  server.py
